--- a/spotify_clone.html
+++ b/spotify_clone.html
@@ -321,7 +321,7 @@
             </div>
             <div class="controls">
                 <img src="./assets/controls_icon1.png" class="ctrl-icon control"alt="">
-                <img src="./assets/controld_icon2.png" class="ctrl-icon control">
+                <img src="./assets/controld_icon2.png" class="ctrl-icon control"alt="">
                 <img src="./assets/controls_icon3.png" class="ctrl-iconx control">
                 <img src="./assets/controls_icon4.png" class="ctrl-icony control">
                 <label for="volumn"><img src="./assets/controls_icon5.png" class="ctrl-icon"></label>
